--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
         "merge2": "1.0.2"
     },
     "devDependencies": {
-        "browser-sync": "2.14.0",
+        "browser-sync": "^2.14.0",
         "protractor": "^3.2.1"
     }
 }
